app/styles/landingpage/intro.scss
$mobile-browser-bar-offset: 0px;

.sy-intro {
  height: calc(100vh - #{$mobile-browser-bar-offset});
  margin-left: -20px;
  margin-right: -20px;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  position: relative;

  @include media-breakpoint-up(sm) {
    height: calc(100vh - 60px);
    align-items: center;
  }
}

.sy-intro__svg {
  display: block;
  width: 100%;
  fill: sycolor(dark);
  z-index: 100;
  animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-logo forwards;
  transform: scale(0.85, 0.85);
  z-index: 0;

  @include media-breakpoint-up(sm) {
    fill: map-get($colors, white);
  }
}

.sy-small-planet {
  position: absolute;
  overflow: hidden;
  width: 100vw;
  height: calc(100vh - #{$mobile-browser-bar-offset});
  top: 0;
  left: 0;
  z-index: -2;

  &::before {
    content: '';
    position: absolute;
    left: -75vw;
    top: -260vw;
    height: 380vw;
    width: 380vw;
    background-color: white;
    border-radius: 50%;
    // animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-large-planet forwards;
    transform: scale(0.98);
  }

  @include media-breakpoint-up(sm) {
    display: none;
  }
}

.sy-small-planet__orbiter {
  transform-origin: 150px -150px;
  animation: 10s infinite linear orbit;
  position: absolute;
  height: 15px;
  width: 15px;
  border-radius: 50%;
  background-color: map-get($colors, brand);
  top: 0;
  left: -69vw;
  transform-origin: 200vw -76vw;
  animation: 10s infinite linear small-orbit;
}

@keyframes small-orbit {
  0% {
    transform: rotateZ(-20deg);
  }
  100% {
    transform: rotateZ(-60deg);
  }
}

@keyframes scale-in-small-planet {
  to {
    height: 400vw;
    width: 400vw;
  }
}

@keyframes scale-in-logo {
  to {
    transform: scale(1, 1);
  }
}




.sy-large-planet {
  position: absolute;
  left: 35vw;
  top: -300vw;
  height: 380vw;
  width: 380vw;
  background-color: white;
  border-radius: 50%;
  animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-large-planet forwards;
  height: 400vw;
  width: 400vw;
  transform: scale(0.98);
  display: none;

  @include media-breakpoint-up(sm) {
    display: block;
  }
}

.sy-large-planet__orbiter {
  position: absolute;
  height: 15px;
  width: 15px;
  border-radius: 50%;
  background-color: map-get($colors, brand);
  top: calc(50% - 8px);
  left: -11px;
  transform-origin: calc(200vw + 11px) 0;
  animation: 20s infinite linear large-orbit;
}

@keyframes large-orbit {
  0% {
    transform: rotateZ(-28deg);
  }
  100% {
    transform: rotateZ(-50deg);
  }
}

